--- a/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesprotection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesprotection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CellPropertiesProtection:interface'
     summary: |-
-      <span data-ttu-id="5e62c-101">表示的`format.protection`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="5e62c-101">Represents the `format.protection` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="5e62c-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="5e62c-102"></span></span><!-- --><span data-ttu-id="5e62c-103">，和`getColumnProperties`或的`format.protection`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="5e62c-103">, and `getColumnProperties` or the `format.protection` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="5e62c-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="5e62c-104"></span></span><!-- --><span data-ttu-id="5e62c-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="5e62c-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="5e62c-106">.</span><span class="sxs-lookup"><span data-stu-id="5e62c-106"></span></span>
+      表示 `format.protection` 的属性`getCellProperties`<!-- -->, `getRowProperties`<!-- -->，和 `getColumnProperties` 或的 `format.protection` 输入参数`setCellProperties`<!-- -->, `setRowProperties`<!-- -->，并`setColumnProperties`<!-- -->.
 
-      <span data-ttu-id="5e62c-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e62c-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesProtection
     fullName: Excel.CellPropertiesProtection
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.CellPropertiesProtection#locked:member'
   - uid: 'excel!Excel.CellPropertiesProtection#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="5e62c-108">表示`format.protection.formulaHidden`属性。</span><span class="sxs-lookup"><span data-stu-id="5e62c-108">Represents the `format.protection.formulaHidden` property.</span></span>
+      表示`format.protection.formulaHidden`属性。
 
-      <span data-ttu-id="5e62c-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e62c-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesProtection#locked:member'
     summary: |-
-      <span data-ttu-id="5e62c-110">表示`format.protection.locked`属性。</span><span class="sxs-lookup"><span data-stu-id="5e62c-110">Represents the `format.protection.locked` property.</span></span>
+      表示`format.protection.locked`属性。
 
-      <span data-ttu-id="5e62c-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e62c-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
