--- a/docs/docs-ref-autogen/excel/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapelinestyle.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeLineStyle:enum'
     summary: |-
-      <span data-ttu-id="23032-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="23032-101">The style for a line.</span></span>
+      线条的样式。
 
-      <span data-ttu-id="23032-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="23032-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeLineStyle
     fullName: Excel.ShapeLineStyle
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.ShapeLineStyle.thinThick:member'
       - 'excel!Excel.ShapeLineStyle.thinThin:member'
   - uid: 'excel!Excel.ShapeLineStyle.single:member'
-    summary: <span data-ttu-id="23032-103">单线。</span><span class="sxs-lookup"><span data-stu-id="23032-103">Single line.</span></span>
+    summary: 单线。
     name: single
     fullName: single
     langs:
@@ -26,7 +26,7 @@ items:
     type: field
     numericValue: '"Single"'
   - uid: 'excel!Excel.ShapeLineStyle.thickBetweenThin:member'
-    summary: <span data-ttu-id="23032-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="23032-104">Thick line with a thin line on each side.</span></span>
+    summary: 粗线每一侧各带一条细线。
     name: thickBetweenThin
     fullName: thickBetweenThin
     langs:
@@ -34,7 +34,7 @@ items:
     type: field
     numericValue: '"ThickBetweenThin"'
   - uid: 'excel!Excel.ShapeLineStyle.thickThin:member'
-    summary: '<span data-ttu-id="23032-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="23032-105">Thick line next to thin line.</span></span> <span data-ttu-id="23032-106">对于水平线，粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="23032-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="23032-107">对于垂直线，粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="23032-107">For vertical lines, the thick line is to the left of the thin line.</span></span>'
+    summary: 粗线位于细线旁边。 对于水平线，粗线位于细线上方。 对于垂直线，粗线位于细线的左侧。
     name: thickThin
     fullName: thickThin
     langs:
@@ -42,7 +42,7 @@ items:
     type: field
     numericValue: '"ThickThin"'
   - uid: 'excel!Excel.ShapeLineStyle.thinThick:member'
-    summary: '<span data-ttu-id="23032-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="23032-108">Thick line next to thin line.</span></span> <span data-ttu-id="23032-109">对于水平线，粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="23032-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="23032-110">对于垂直线条，粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="23032-110">For vertical lines, the thick line is to the right of the thin line.</span></span>'
+    summary: 粗线位于细线旁边。 对于水平线，粗线位于细线下方。 对于垂直线条，粗线位于细线的右侧。
     name: thinThick
     fullName: thinThick
     langs:
@@ -50,7 +50,7 @@ items:
     type: field
     numericValue: '"ThinThick"'
   - uid: 'excel!Excel.ShapeLineStyle.thinThin:member'
-    summary: <span data-ttu-id="23032-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="23032-111">Two thin lines.</span></span>
+    summary: 双细线。
     name: thinThin
     fullName: thinThin
     langs:
