--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlegendentrycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlegendentrycollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionData:interface'
-    summary: <span data-ttu-id="8f5d7-101">描述通过调用返回的数据的接口`chartLegendEntryCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="8f5d7-101">An interface describing the data returned by calling `chartLegendEntryCollection.toJSON()`</span></span><!-- --><span data-ttu-id="8f5d7-102">.</span><span class="sxs-lookup"><span data-stu-id="8f5d7-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegendEntryCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendEntryCollectionData
     fullName: Excel.Interfaces.ChartLegendEntryCollectionData
     langs:
