--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlegendformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlegendformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
-    summary: '<span data-ttu-id="dc251-101">一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于`chartLegendFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="dc251-101">An interface for updating data on the ChartLegendFormat object, for use in `chartLegendFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="dc251-102">.</span><span class="sxs-lookup"><span data-stu-id="dc251-102"></span></span>'
+    summary: '一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于`chartLegendFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartLegendFormatUpdateData
     fullName: Excel.Interfaces.ChartLegendFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="dc251-103">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="dc251-103">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span>
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="dc251-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc251-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
