--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlineformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartlineformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLineFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="96056-101">封装线条元素的格式设置选项。</span><span class="sxs-lookup"><span data-stu-id="96056-101">Encapsulates the formatting options for line elements.</span></span>
+      封装线条元素的格式设置选项。
 
-      <span data-ttu-id="96056-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96056-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLineFormatLoadOptions
     fullName: Excel.Interfaces.ChartLineFormatLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLineFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartLineFormatLoadOptions#color:member'
   - uid: 'excel!Excel.Interfaces.ChartLineFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="96056-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="96056-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="96056-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="96056-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="96056-105">).</span><span class="sxs-lookup"><span data-stu-id="96056-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLineFormatLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="96056-106">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="96056-106">HTML color code representing the color of lines in the chart.</span></span>
+      表示图表中的线条颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="96056-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96056-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
