--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.charttrendlineformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.charttrendlineformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
-    summary: <span data-ttu-id="eb7f6-101">描述通过调用返回的数据的接口`chartTrendlineFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="eb7f6-101">An interface describing the data returned by calling `chartTrendlineFormat.toJSON()`</span></span><!-- --><span data-ttu-id="eb7f6-102">.</span><span class="sxs-lookup"><span data-stu-id="eb7f6-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendlineFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineFormatData
     fullName: Excel.Interfaces.ChartTrendlineFormatData
     langs:
