--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.customconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.customconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData:interface'
-    summary: <span data-ttu-id="53d83-101">描述通过调用返回的数据的接口`customConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="53d83-101">An interface describing the data returned by calling `customConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="53d83-102">.</span><span class="sxs-lookup"><span data-stu-id="53d83-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`customConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.CustomConditionalFormatData
     fullName: Excel.Interfaces.CustomConditionalFormatData
     langs:
