--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.customconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.customconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="c6e66-101">一个用于更新 CustomConditionalFormat 对象上的数据的接口，可用于`customConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c6e66-101">An interface for updating data on the CustomConditionalFormat object, for use in `customConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="c6e66-102">.</span><span class="sxs-lookup"><span data-stu-id="c6e66-102"></span></span>'
+    summary: '一个用于更新 CustomConditionalFormat 对象上的数据的接口，可用于`customConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.CustomConditionalFormatUpdateData
     fullName: Excel.Interfaces.CustomConditionalFormatUpdateData
     langs:
