--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalrangeborderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalrangeborderlinestyle.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ConditionalRangeBorderLineStyle:enum'
-    summary: '<span data-ttu-id="74243-101">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74243-101">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ConditionalRangeBorderLineStyle
     fullName: Excel.ConditionalRangeBorderLineStyle
     langs:
