--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpivotoptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpivotoptionsupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPivotOptionsUpdateData:interface'
-    summary: '<span data-ttu-id="60fb6-101">一个用于更新 ChartPivotOptions 对象上的数据的接口，可用于`chartPivotOptions.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="60fb6-101">An interface for updating data on the ChartPivotOptions object, for use in `chartPivotOptions.set({ ... })`</span></span><!-- --><span data-ttu-id="60fb6-102">.</span><span class="sxs-lookup"><span data-stu-id="60fb6-102"></span></span>'
+    summary: '一个用于更新 ChartPivotOptions 对象上的数据的接口，可用于`chartPivotOptions.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPivotOptionsUpdateData
     fullName: Excel.Interfaces.ChartPivotOptionsUpdateData
     langs:
