--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
-    summary: <span data-ttu-id="e9aa2-101">描述通过调用返回的数据的接口`chartPointFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e9aa2-101">An interface describing the data returned by calling `chartPointFormat.toJSON()`</span></span><!-- --><span data-ttu-id="e9aa2-102">.</span><span class="sxs-lookup"><span data-stu-id="e9aa2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartPointFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartPointFormatData
     fullName: Excel.Interfaces.ChartPointFormatData
     langs:
